[gd_scene load_steps=11 format=3 uid="uid://kfne03ql8pcq"]

[ext_resource type="Texture2D" uid="uid://c6rme2o6dyaoj" path="res://art/tile_0104.png" id="1_8j1b0"]
[ext_resource type="Script" uid="uid://utn37ymxvcc2" path="res://scenes/ui/card_super_detail.gd" id="1_s23g5"]
[ext_resource type="Texture2D" uid="uid://uddpi0vfxtsl" path="res://art/rarity.png" id="2_fqg8x"]
[ext_resource type="Resource" uid="uid://cbasdh0yeoa5r" path="res://testing/test_card.tres" id="2_koavt"]
[ext_resource type="Resource" uid="uid://dw7iw834ey8jm" path="res://characters/bulbasaur/bulbasaur.tres" id="3_4ux4t"]
[ext_resource type="Texture2D" uid="uid://dh8lyqfw6ma3c" path="res://art/sprites/icons/1.png" id="3_q6d5j"]
[ext_resource type="Texture2D" uid="uid://bux11a8ux54cv" path="res://art/status_effects/PoisonedIC_Masters.png" id="3_wshgr"]
[ext_resource type="Texture2D" uid="uid://8hitk03a8wtk" path="res://art/sprites/spritesheets/types.png" id="4_s23g5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wshgr"]
bg_color = Color(0.954, 0.917, 0.85, 0.375)

[sub_resource type="LabelSettings" id="LabelSettings_koavt"]
font_size = 24

[node name="CardSuperDetail" type="Control"]
layout_mode = 3
anchor_right = 0.258
anchor_bottom = 0.597
offset_right = -0.0960083
offset_bottom = 0.0639954
pivot_offset = Vector2(66, 86)
script = ExtResource("1_s23g5")
card = ExtResource("2_koavt")
char_stats = ExtResource("3_4ux4t")

[node name="Panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(111, 153)
layout_mode = 0
offset_top = 19.0
offset_right = 111.0
offset_bottom = 172.0
mouse_filter = 1

[node name="pkmn_border" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(96, 75)
layout_mode = 1
offset_left = 7.0
offset_top = 31.0
offset_right = 103.0
offset_bottom = 106.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wshgr")

[node name="descr_border" type="PanelContainer" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(110, 48)
layout_mode = 1
offset_top = 121.0
offset_right = 110.0
offset_bottom = 169.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_wshgr")

[node name="VBoxContainer" type="VBoxContainer" parent="descr_border"]
custom_minimum_size = Vector2(110, 48)
layout_mode = 2

[node name="CardEffects" type="HBoxContainer" parent="descr_border/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Damage" type="HBoxContainer" parent="descr_border/VBoxContainer/CardEffects"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="DmgIcon" type="TextureRect" parent="descr_border/VBoxContainer/CardEffects/Damage"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("1_8j1b0")
stretch_mode = 5

[node name="DmgDescription" type="RichTextLabel" parent="descr_border/VBoxContainer/CardEffects/Damage"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[color=red]10[/color]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Status" type="HBoxContainer" parent="descr_border/VBoxContainer/CardEffects"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 1

[node name="StatusIcon" type="TextureRect" parent="descr_border/VBoxContainer/CardEffects/Status"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_wshgr")
expand_mode = 1
stretch_mode = 5

[node name="StatusDescription" type="RichTextLabel" parent="descr_border/VBoxContainer/CardEffects/Status"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[color=purple]2[/color]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardEffects2" type="HBoxContainer" parent="descr_border/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Description2" type="HBoxContainer" parent="descr_border/VBoxContainer/CardEffects2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="Text2" type="RichTextLabel" parent="descr_border/VBoxContainer/CardEffects2/Description2"]
layout_mode = 2
bbcode_enabled = true
text = "X2"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description3" type="HBoxContainer" parent="descr_border/VBoxContainer/CardEffects2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
alignment = 1

[node name="Icon3" type="TextureRect" parent="descr_border/VBoxContainer/CardEffects2/Description3"]
process_mode = 3
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_wshgr")
expand_mode = 1
stretch_mode = 5

[node name="Text3" type="RichTextLabel" parent="descr_border/VBoxContainer/CardEffects2/Description3"]
layout_mode = 2
bbcode_enabled = true
text = "[color=purple]2[/color]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardDescription" type="RichTextLabel" parent="descr_border/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true
text = "[color=red]10[/color]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rarity" type="TextureRect" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
offset_left = 20.0
offset_top = 39.0
offset_right = 60.0
offset_bottom = 79.0
rotation = 3.14159
texture = ExtResource("2_fqg8x")
expand_mode = 1
stretch_mode = 5

[node name="Cost" type="Label" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(24, 27)
layout_mode = 0
offset_left = -11.0
offset_top = 5.0
offset_right = 13.0
offset_bottom = 32.0
text = "9"
label_settings = SubResource("LabelSettings_koavt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OwnerIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(105, 105)
layout_mode = 1
offset_top = 6.0
offset_right = 105.0
offset_bottom = 111.0
pivot_offset = Vector2(17, 22)
texture = ExtResource("3_q6d5j")
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(117, 55)
scale = Vector2(0.842, 0.842)
texture = ExtResource("4_s23g5")
region_enabled = true
region_rect = Rect2(70, 16, 38, 38)

[node name="CardName" type="RichTextLabel" parent="."]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 12.0
offset_top = 21.0
offset_right = 110.0
offset_bottom = 30.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 8
text = "ABSORB"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetType" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 3.0
offset_top = 108.0
offset_right = 53.0
offset_bottom = 117.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 8
text = "Target:"
fit_content = true
autowrap_mode = 2
vertical_alignment = 1

[node name="Target" type="RichTextLabel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 52.0
offset_top = 108.0
offset_right = 108.0
offset_bottom = 118.0
mouse_filter = 1
text = "Self"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1
